# spotify_lib

./: .gitignore  MEMO.md  README.md  activate_account.py  fetch_token.py  fetch_track_from_search.py  pyproject.toml
fetched/: searched_track.json
orm/: operator.py  spotify.py
